# telangana_sand_booking_backend

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  script.py
booking/: admin.py  models.py  selenium_script.py  serializers.py  urls.py  views.py
booking/fixtures/: district_mandal_villages.json  district_stockyards.json  districts.json  distrit_mandal.json
booking/migrations/: 0001_initial.py  0002_bookingusercredential_bookingmasterdata.py  0003_bookinghistory.py  0004_bookinghistory_message.py  0005_remove_stockyard_address_and_more.py  0006_remove_stockyard_sand_price_alter_stockyard_name.py
sand_booking/: asgi.py  settings.py  urls.py  wsgi.py
sms_manager/: apps.py  models.py  serializers.py  urls.py  views.py
sms_manager/migrations/: 0001_initial.py  0002_alter_userotp_phone_number.py  0003_alter_userotp_unique_together.py
